# tinyGPT

./: .gitignore  GPT.py  README.md  dataloader.py  dataset.py  dataset_hf.py  predict.py  pyproject.toml  tinytransformer.py  train.py  transformer.py
tests/: data.txt  test_dataloader.py  test_dataset.py  test_gpt.py  test_transformer.py
