[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.2.2",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Vijay Gaikwad", email = "vijaygkd@gmail.com"},
]
dependencies = [
    "torch>=1.13.1",
    "numpy>=1.24.2",
    "transformers>=4.27.4",
    "torchinfo>=1.7.2",
    "datasets>=2.11.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}
