[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.2.2",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Vijay Gaikwad", email = "vijaygkd@gmail.com"},
]
dependencies = [
    "numpy>=1.24.2",
    "transformers>=4.27.4",
    "torchinfo>=1.7.2",
    "datasets>=2.11.0",
    "torch>=2.0.0",
    "wandb>=0.15.9",
]
requires-python = ">=3.10"
license = {text = "MIT"}
